[package]
name = "libdonow"
version = "0.1.0"
edition = "2021"
license="MIT"
description="A library for parsing and manipulating todo.txt files efficiently using regex"
repository="https://github.com/newtoallofthis123/libdonow"
authors = ["NoobScience <ishan@noobscience.in>"]
readme="README.md"
homepage="https://noobscience.in/projects/libdonow"

[dependencies]
chrono = { version = "0.4.38", features= ["serde"] }
fancy-regex = "0.13.0"
hashbrown = { version = "0.14.5", features = ["serde"] }
serde = { version = "1.0.208", features = ["serde_derive"] }
serde_json = "1.0.125"
